--- a/src/Models/Geography/Mappings/app.Models.Geography.PostalDistrict.dcm.yml
+++ b/src/Models/Geography/Mappings/app.Models.Geography.PostalDistrict.dcm.yml
@@ -1,30 +1,22 @@
-geography\Models\Subdivision:
+app\Models\Geography\PostalDistrict:
   type:               entity
-  table:              Subdivision
-  repositoryClass:    geography\Repositories\SubdivisionRepository
+  table:              PostalDistrict
+  repositoryClass:    app\Repositories\Geography\PostalDistrictRepository
 
   manyToOne:
     country:
-      targetEntity:   geography\Models\Country
+      targetEntity:   app\Models\Geography\Country
       nullable:       false
       fetch:          LAZY
-      inversedBy:     subdivisions
+      inversedBy:     postalDistricts
       joinColumn:
         name:         countryId
         referencedColumnName: id
-    subdivisionType:
-      targetEntity:   geography\Models\SubdivisionType
-      nullable:       false
-      fetch:          LAZY
-      inversedBy:     subdivisions
-      joinColumn:
-        name:         subdivisionTypeId
-        referencedColumnName: id
 
   oneToMany:
-    altNames:
-      targetEntity:   geography\Models\SubdivisionAltName
-      mappedBy:       subdivision
+    postalDistrictSubdivisions:
+      targetEntity:   app\Models\Geography\PostalDistrictSubdivision
+      mappedBy:       postalDistrict
       cascade:        ["persist", "remove"]
 
   id:
@@ -34,7 +26,7 @@ geography\Models\Subdivision:
       nullable:       false
       options:
         unsigned:     true
-        comment:      'Subdivision id'
+        comment:      'PostalDistrict id'
       id:             true
       generator:
         strategy:     IDENTITY
@@ -47,23 +39,23 @@ geography\Models\Subdivision:
       length:         100
       options:
         fixed:        false
-        comment:      "Unique name for the Subdivision"
+        comment:      "Unique english name for the PostalDistrict"
+    french:
+      column:         french
+      type:           string
+      nullable:       false
+      length:         100
+      options:
+        fixed:        false
+        comment:      "Unique french name for the PostalDistrict"
     symbol:
       column:         symbol
       type:           string
       nullable:       false
-      length:         50
+      length:         100
       options:
         fixed:        false
-        comment:      "Unique symbol for the Subdivision"
-    localSymbol:
-      column:         localSymbol
-      type:           string
-      nullable:       false
-      length:         50
-      options:
-        fixed:        false
-        comment:      "localSymbol is unique for its Country  for the Subdivision"
+        comment:      "Unique symbol for the PostalDistrict"
 ##  BEGIN BOILER PLATE
     statusId:
       column:         statusId
@@ -71,21 +63,21 @@ geography\Models\Subdivision:
       nullable:       false
       options:
         unsigned:     true
-        comment:      "Status of the Subdivision"
+        comment:      "Status of the PostalDistrict"
         default:      1
     createdAt:
       column:         createdAt
       type:           datetime
       nullable:       false
       options:
-        comment:      "When the Subdivision was created"
+        comment:      "When the PostalDistrict was created"
         default:      CURRENT_datetime
     expiresAt:
       column:         expiresAt
       type:           datetime
       nullable:       false
       options:
-        comment:      "When the Subdivision expires"
+        comment:      "When the PostalDistrict expires"
         default:      "2038-01-01 01:01:01"
 
   lifecycleCallbacks: {  }
